[gd_scene load_steps=10 format=3 uid="uid://test_chamber_001"]

[ext_resource type="Script" path="res://scripts/scenes/test_chamber.gd" id="1_test_chamber"]
[ext_resource type="Script" path="res://scripts/entities/player.gd" id="2_player"]
[ext_resource type="Script" path="res://scripts/systems/projectile_manager.gd" id="3_projectile"]
[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="4_hud"]
[ext_resource type="Script" path="res://scripts/ui/sequencer_ui.gd" id="5_sequencer"]
[ext_resource type="Script" path="res://scripts/ui/debug_panel.gd" id="6_debug"]
[ext_resource type="Script" path="res://scripts/ui/dps_overlay.gd" id="7_dps"]

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pickup"]
radius = 80.0

[node name="TestChamber" type="Node2D" groups=["test_chamber"]]
script = ExtResource("1_test_chamber")

[node name="Ground" type="Node2D" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(1500, 1500)
script = ExtResource("2_player")

[node name="PlayerVisual" type="Polygon2D" parent="Player"]
color = Color(0, 0.9, 0.7, 1)
polygon = PackedVector2Array(-12, 0, -6, -10, 6, -10, 12, 0, 6, 10, -6, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_player")

[node name="InvincibilityTimer" type="Timer" parent="Player"]
one_shot = true

[node name="PickupArea" type="Area2D" parent="Player"]

[node name="PickupCollision" type="CollisionShape2D" parent="Player/PickupArea"]
shape = SubResource("CircleShape2D_pickup")

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
position_smoothing_speed = 5.0

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="ProjectileManager" type="Node2D" parent="."]
script = ExtResource("3_projectile")

[node name="MultiMeshInstance2D" type="MultiMeshInstance2D" parent="ProjectileManager"]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("4_hud")

[node name="HPBar" type="Control" parent="HUD"]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 340.0
offset_bottom = 70.0

[node name="FatigueBar" type="Control" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -230.0
offset_top = 20.0
offset_right = -10.0
offset_bottom = 150.0

[node name="InfoPanel" type="VBoxContainer" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 70.0

[node name="BPMLabel" type="Label" parent="HUD/InfoPanel"]
text = "BPM: 120"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="HUD/InfoPanel"]
text = "TEST MODE"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="HUD/InfoPanel"]
text = "Lv.1"
horizontal_alignment = 1

[node name="EnemyCountLabel" type="Label" parent="HUD/InfoPanel"]
text = "Enemies: 0"
horizontal_alignment = 1

[node name="SuggestionPanel" type="PanelContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -230.0
offset_right = 200.0
offset_bottom = -190.0

[node name="SuggestionLabel" type="Label" parent="HUD/SuggestionPanel"]
text = ""
horizontal_alignment = 1

[node name="SequencerPanel" type="Control" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -150.0
offset_right = 300.0
offset_bottom = -10.0
script = ExtResource("5_sequencer")

[node name="ManualSlots" type="HBoxContainer" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -220.0
offset_right = 100.0
offset_bottom = -160.0
theme_override_constants/separation = 8

[node name="FatigueFilter" type="ColorRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="DebugPanel" type="CanvasLayer" parent="."]
layer = 20
script = ExtResource("6_debug")

[node name="DPSOverlay" type="CanvasLayer" parent="."]
layer = 19
script = ExtResource("7_dps")
